--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,31 @@ div.HHlogo {
 h1.MakeAppt {
   font-variant: small-caps;
 }
+
+div.headerWithText {
+  background-size: cover;
+  height: 500px;
+  width: 100%;
+  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('./assests/images/desktop2.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+div.headerText {
+  text-align: center;
+  text-decoration-color: #ff0000;
+
+
+}
+
+h1.ui.header.headerText {
+  color: white;
+  text-decoration: underline;
+  padding: 70px 0;
+  text-shadow: 4px 3px #808080;
+  font-size: 50px;
+}
+
+h2.ui.header.headerText {
+  color: white;
+}
