--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@ a.ui.card {
 
 .ui.card>.image  {
   height: 600px;
+  text-align: center;
 }
 
 div.HHlogo {
@@ -57,8 +58,7 @@ h1.MakeAppt {
 div.headerWithText {
   background-size: cover;
   height: 500px;
-  width: 100%;
-  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('./assets/images/desktop2.jpg');
+  background: url('./assets/images/helping-hands2.jpg');
   background-repeat: no-repeat;
   background-position: center;
 }
